# StudyFlask

.env/: pyvenv.cfg
.env/Scripts/: activate  activate.bat
FlaskApi/: pyproject.toml
FlaskApi/instance/: blog.sqlite  flaskr.sqlite
FlaskApi/migrations/versions/: 47a33ac2cbe2_add_active_attr_in_user.py  dfdcbede5ab4_initial_migration.py
FlaskApi/src/: app.py  db.py
FlaskApi/src/controllers/: user.py
